tests/baselines/reference/typeOfThisInStaticMembers10(target=esnext).errors.txt
typeOfThisInStaticMembers10.ts(6,16): error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
typeOfThisInStaticMembers10.ts(12,16): error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
typeOfThisInStaticMembers10.ts(13,26): error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
typeOfThisInStaticMembers10.ts(14,22): error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
typeOfThisInStaticMembers10.ts(15,31): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
typeOfThisInStaticMembers10.ts(37,31): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== typeOfThisInStaticMembers10.ts (6 errors) ====
    declare const foo: any;
    
    @foo
    class C {
        static a = 1;
        static b = this.a + 1;
                   ~~~~
!!! error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
    }
    
    @foo
    class D extends C {
        static c = 2;
        static d = this.c + 1;
                   ~~~~
!!! error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
        static e = super.a + this.c + 1;
                             ~~~~
!!! error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
        static f = () => this.c + 1;
                         ~~~~
!!! error TS2816: Cannot use 'this' in a static property initializer of a decorated class.
        static ff = function () { this.c + 1 }
                                  ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
!!! related TS2738 typeOfThisInStaticMembers10.ts:15:17: An outer value of 'this' is shadowed by this container.
        static foo () {
            return this.c + 1;
        }
        static get fa () {
            return this.c + 1;
        }
        static set fa (v: number) {
            this.c = v + 1;
        }
    }
    
    class CC {
        static a = 1;
        static b = this.a + 1;
    }
    
    class DD extends CC {
        static c = 2;
        static d = this.c + 1;
        static e = super.a + this.c + 1;
        static f = () => this.c + 1;
        static ff = function () { this.c + 1 }
                                  ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
!!! related TS2738 typeOfThisInStaticMembers10.ts:37:17: An outer value of 'this' is shadowed by this container.
        static foo () {
            return this.c + 1;
        }
        static get fa () {
            return this.c + 1;
        }
        static set fa (v: number) {
            this.c = v + 1;
        }
    }
    